--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+<html ng-app="WebsiteApp">
+<head>
 <link rel = "stylesheet"
       type = "text/css"
       href = "../styles/site.css">
-<html>
-<body>
+<script type="text/javascript" src="../node_modules/angular/angular.js"></script>
+<script src="../js/app.js"></script>
+</head>
+<body ng-controller="mainController">
 
 <div class="topnav">
   <a class="active" href="#index">About</a>
@@ -12,7 +16,9 @@
   <a href="#websiteinfo" style="float:right">Website Info</a>
 </div>
 
+<input ng-model="temp"/>
 
+{{temp}}
 
 </body>
 </html>
