--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300');
+
+$width-for-page: 80%;
+
+body {
+ font-family: 'Lora', serif;
+}
+
+h1 {
+ font-family: 'Montserrat', sans-serif;
+ font-weight: 400;
+ text-transform: uppercase;
+}
+
+br{
+  padding: inherit;
+}
+
+.content{
+  margin: auto;
+  width: $width-for-page;
+}
