--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <h1>{{title}}</h1>
 <div class="topnav">
   <a class="logo">{{title}}</a>
-  <a routerLink="about" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">About</a>
+  <a routerLink="projects" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Projects</a>
   <a routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Home</a>
 </div>
 
