--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,10 @@ $width-for-page: 80%;
 
 body {
  font-family: 'Lora', serif;
+ margin: 0;
 }
 
-h1 {
+.header {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  text-transform: uppercase;
